--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@vercel/analytics": "^1.5.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^12.6.3",
