--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^12.6.3",
+    "fuse.js": "^7.1.0",
     "next": "^15.3.2",
     "next-themes": "^0.2.1",
     "react": "^19.1.0",
