--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@vercel/analytics": "^1.5.0",
@@ -20,6 +19,7 @@
     "fuse.js": "^7.1.0",
     "next": "^15.5.3",
     "next-themes": "^0.2.1",
+    "nodemailer": "^7.0.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^4.12.0",
@@ -27,6 +27,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
