--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
+    "@types/nodemailer": "^7.0.1",
     "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
