--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^19.1.1",
     "react-icons": "^4.12.0",
     "react-scroll": "^1.8.9",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.9.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
