--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.1.6",
     "framer-motion": "^12.23.16",
     "fuse.js": "^7.1.0",
+    "lucide-react": "^0.544.0",
     "next": "^15.5.3",
     "next-themes": "^0.2.1",
     "nodemailer": "^7.0.6",
